static/global.css
:root {
    --bcsecond: #d9f520;
    --backgrd: #221f1f;
    --lh: 1.4rem;
}

.art-video-player .art-settings .art-setting-panel {
    flex-direction: column;
    display: block;
}

html {
    background-color: var(--backgrd);
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    color: white;
}


.slider {
    z-index: -1;
    background-color: #2e2c2c;
    width: 100%;
}

.main {
    padding: 0px;
    margin:0px;
}
.s{
    padding: 20px;
    background:linear-gradient(to bottom, transparent, #221f1f), url("animebackbw.png") rgb(15, 15, 15) 50% / cover no-repeat;
    background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        background-position: top;
        /*background-attachment: fixed;*/
        background-color: #221f1f;
}
.mains{
    margin-bottom: 20%;
}

.showlist {
    padding: 10px;
}

.buthome {
    background-color: rgb(112, 0, 198);
    color: white;
    border: 0;
    width: 80%;
    border-radius: 10px;
    height: 50px;
    outline: none;
    margin-left: auto;
    margin-right: auto;
}

.buthome:hover {
    cursor: pointer;
    background-color: #2e2c2c;
}

.butshare {
    background-color: rgb(112, 0, 198);
    color: #ffffff;
    border: 2px;
    border-color: #d9f520;
    border-style: dashed;
    align-items: center;
    justify-content: center;
    text-align: center;
    border-radius: 5px;
    outline: none;
    margin-left: auto;
    margin-right: auto;
    height: auto;
    width: 90%;
    padding: 10px;
}

.butflex {
    padding: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}


.center {
    text-align: center;
}

.imgshow {
    border: 1;
    border-radius: 5px;
}

.imgshow:hover {
    background-color: #2e2c2c;
    opacity: 0.6;
}

.crc {
    padding: 5px;
    border: 1;
    border-radius: 100px;
    width: 80px;
}

::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #221f1f;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #888;
}

.pp {
    background-color: var(--bcsecond);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #d9f520;
}


.header {
    display: flex;
    align-items: center;
    backdrop-filter: saturate(180%) blur(2px);
        -webkit-backdrop-filter: saturate(180%) blur(2px);
    justify-content: space-between;
    background-color: var(--bcsecond);
}

.toptext {
    width: 300px;
}

.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 20px;
    cursor: pointer;
    margin-left: 40px;
}
.loader {
    width: 0;
    height: 4.8px;
    display: inline-block;
    position: relative;
    background: #FFF;
    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
    box-sizing: border-box;
    animation: animFw 8s linear infinite;
}

.loader::after,
.loader::before {
    content: '';
    width: 10px;
    height: 1px;
    background: #FFF;
    position: absolute;
    top: 9px;
    right: -2px;
    opacity: 0;
    transform: rotate(-45deg) translateX(0px);
    box-sizing: border-box;
    animation: coli1 0.3s linear infinite;
}

.loader::before {
    top: -4px;
    transform: rotate(45deg);
    animation: coli2 0.3s linear infinite;
}

@keyframes animFw {
    0% {
        width: 0;
    }

    100% {
        width: 100%;
    }
}

@keyframes coli1 {
    0% {
        transform: rotate(-45deg) translateX(0px);
        opacity: 0.7;
    }

    100% {
        transform: rotate(-45deg) translateX(-45px);
        opacity: 0;
    }
}

@keyframes coli2 {
    0% {
        transform: rotate(45deg) translateX(0px);
        opacity: 1;
    }

    100% {
        transform: rotate(45deg) translateX(-45px);
        opacity: 0.7;
    }
}

.loadingb{
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
}
.loadingc{
    margin-left: 50%;
    margin-right: 50%;
}

.back{
    
}
.bam{
    height:max-content;
}
.imgcen {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.menuicon {
    display: none;
    margin: 10px;
    padding: 10px;
}

li,
a {
    padding-left: 15px;
    align-items: center;
    font-family: 'Montserrat', sans-serif;
    font-size: 10px;
    color: white;
    text-decoration: none;
}

.nav_links {
    list-style: none;
    display: inline-flex;
}

.nav_links li a:hover {
    color: #68e8e6;
}

.logo:hover {}

.footer-nav {
    list-style: none;
    display: inline-flex;
    background-color: var(--bcsecond);
}

footer {
    background-color: #221f1f;
}

.social-icons {
    font-size: 40px;
}

.social-icons a :hover {
    color: #d9f520;
}

.foot {
    background-color: rgb(112, 0, 198);
    display: flex;
    color: white;
    position: relative;
    height: auto;
    background-color: var(--backcolor);
    justify-content: space-between;
    align-items: center;
}

.right {
    display: block;
}

.nav_links li a {
    transition: all 0.3s ease 0s;
    text-align: center;
}

.nav_links li {
    margin-top: 25px;
    text-align: center;
    display: inline-block;
    padding: 5px;
}

.nav_links_moble {
    background-color: #2e2c2c;
    list-style: none;
    text-align: center;
    display: none;
    position: fixed;
    margin-bottom: 16px;
}

.nav_links_moble li a:hover {
    color: rgb(94, 232, 124);
}

.nav_links_moble li a {
    background-color: #2e2c2c;
    transition: all 0.3s ease 0s;
}

.nav_links_moble li {
    background-color: #2e2c2c;
    margin-top: 25px;
    display: block;
    text-align: center;
    padding: 5px;
}
/* ... */

